[package]
name = "rex-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structx = { git = "https://github.com/exellian/structx.git" }

[build-dependencies]
inwelling = "0.5.0"

[package.metadata.inwelling]
structx = true